@@ -1,2 +1,46 @@
 # Path-Finder
- The program let you add points of intrest to a map of europe and how you get to them.
+
+---------------------------------------------------------------------
+Created by: nidorbRotkiv.
+
+---------------------------------------------------------------------
+# Description
+
+An interactive map of Europe where you can add nodes to then find paths between these.
+
+---------------------------------------------------------------------
+# Getting Started
+
+Path-Finder is made in JavaFX and Java. To run the program you will need to add the folder "lib" in your "Libaries". The folder is located inside "java- fx-sdk-18". You will also have to add the following "--module-path "/where/your/folder/is/located/javafx-sdk-18/lib" --add-modules=javafx.controls,javafx.fxml" to your "VM options" inside your "Run/Debug Configurations". 
+
+---------------------------------------------------------------------
+# Usage
+
+You will first get to see a blank menu. Press "File" and "New Map" to start.
+
+// File menu
+
+"Open" let you open your saved map with all connections and nodes.
+
+"Save" will save your current map inside the main folder and replace the previously saved one.
+
+"Save Image" will save an image of your map inside the main folder.
+
+"Exit" will close the app.
+
+//
+ 
+"New Place" will let you add a new node to the map and name it.
+
+"New Connection" will connect two marked nodes. You can choose the transportation and how long it takes.
+
+"Show Connection" will show information about a connection.
+ 
+"Change Connection" will change the time it takes to travel between two nodes.
+
+"Find Path" will find a path between the two selected nodes and display travel directions. 
+
+ ---------------------------------------------------------------------
+ Distributed under the MIT License. See LICENSE.txt for more information.
+
+ ---------------------------------------------------------------------
